k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: build-elevate
  labels:
    app.kubernetes.io/managed-by: kubectl
